pagina cliente y ruta advicer

--- a/pad-front/src/styles/components/accountPopover.scss
+++ b/pad-front/src/styles/components/accountPopover.scss
@@ -7,6 +7,9 @@
         cursor: pointer;
         border-radius: 8px;
         margin: 5px;
+        font-family: 'Roboto', sans-serif;
+        font-size: 16px;
+
     }
     .popoverBtn:hover{
         background-color: #5672b5;
