--- a/pad-front/src/styles/base/base.scss
+++ b/pad-front/src/styles/base/base.scss
@@ -8,3 +8,12 @@ body {
 	line-height: 18px;
 	-webkit-font-smoothing: antialiased;
 }
+@media (min-width: 768px) {
+
+}
+@media (min-width: 992px) {
+
+}
+@media (min-width: 1200px) {
+    
+}
