--- a/pad-front/src/styles/pages/client.scss
+++ b/pad-front/src/styles/pages/client.scss
@@ -50,11 +50,14 @@
   width: 50%;
 }
 .clientLogoContainer{
-  visibility: hidden;
+  
 }
+
 .clientLogo {
   width: 100%;
   max-width: 400px;
+  display: none;
+  visibility: collapse;
 }
 .formStudy {
   position: relative;
@@ -89,6 +92,24 @@
   }
 }
 
+  .buttonComp1{
+    margin-top: 10px;
+    margin-bottom: 70px;
+    width: 80%;
+    border: none;
+    padding: 12px;
+    cursor: pointer;
+    background-color: #222222;
+    color: #2a90be;
+    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    border-radius: 8px;
+    z-index: 5;
+
+  }
+
+
 @media (min-width: 768px) {
   .clientContainer {
     height: 100%;
@@ -102,14 +123,26 @@
     justify-content: space-around;
     height: 100%;
   }
-  .clientLogoContainer {
+  .clientInfo{
+    width: 70%;
+  }
+  .clientLogobox{
     width: 30%;
+  }
+  .clientLogoContainer {
+    width: 100%;
     height: 100%;
     .logoSticky {
       position: sticky;
       top: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
     .clientLogo {
+      
+      display:block;
+      visibility: visible;
     }
   }
   .loginAndSign {
@@ -138,12 +171,13 @@
     .condImg {
       width: 30%;
       border-radius: 8px;
+      margin: 10px;
     }
   }
 }
 @media (min-width: 992px) {
   .clientLogoContainer {
-    width: 25%;
+    width: 100%;
   }
 }
 @media (min-width: 1200px) {
