--- a/pad-front/src/styles/pages/client.scss
+++ b/pad-front/src/styles/pages/client.scss
@@ -42,9 +42,10 @@
   width: 50%;
 }
 .profileImg {
-  width: 20%;
-  min-width: 77px;
-  border-radius: 100%;
+  width: 60px;
+  height: 60px;
+  object-fit: cover;
+  border-radius: 50px;
 }
 .infoClient {
   width: 50%;
