--- a/pad-front/src/styles/pages/client.scss
+++ b/pad-front/src/styles/pages/client.scss
@@ -4,6 +4,7 @@
   font-family: "Roboto", sans-serif;
   font-size: 14px;
   font-weight: bold;
+  overflow: hidden;
 }
 .loginAndSign {
   .loginAndSignText {
